# excel-data-hub

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  init_db.sql
locales/: ar.json  en.json  ug.json  zh.json
src/: database_sea.rs  excel_processor_sea.rs  i18n_manager.rs  lib.rs  main.rs  utils.rs  web_server.rs
src/models/: mod.rs
src/models/entity/: auth_tokens.rs  excel_data.rs  files.rs  mod.rs  users.rs  workspaces.rs
static/css/: i18n.css
static/js/: i18n.js
