[package]
name = "excel_data_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Excel处理
calamine = "0.30.1"
# Excel导出
rust_xlsxwriter = "0.79.0"
# Web框架
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "with-chrono", "with-json"], default-features = false }
futures = "0.3"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
# 文件处理
tokio-stream = "0.1"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 哈希计算
md5 = "0.7"
# 线程池
rayon = "1.7"
# 环境变量
dotenv = "0.15"